# anime-chat-bot-fastapi

./: .env.example  .gitignore  API_DOCUMENTATION.md  FRONTEND_INTEGRATION_GUIDE.md  OPTIMIZATION_PROGRESS.md  README.md  config.env.example  diagram.mermaid  frontend_guide.md  pyproject.toml  requirements.txt  run.py  vercel.json
app/: README.md  __init__.py  main.py
app/api/: __init__.py  characters.py  chat.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/models/: __init__.py  character.py  message.py  session.py
app/routers/: analytics_router.py  api_router.py  auth_router.py  chat_api.py  enhanced_memory.py  memory_router.py  stats_router.py  websocket_router.py
app/services/: __init__.py  character_loader.py  character_relationship_manager.py  character_state_manager.py  context_aware_adjuster.py  emotion_manager.py  llm_connector.py  memory_manager.py  prompt_builder.py  response_validator.py  session_manager.py
data/characters/: asuka_langley.json  miku_hatsune.json  rei_ayanami.json
examples/: client_example.py
tests/: test_api.py  test_models.py
workers/: README.md  SETUP.md  SILICONFLOW_CONFIG.md  package.json  wrangler.toml
workers/src/: main.py  router.py
workers/src/data/: characters.py
workers/src/handlers/: auth_handler.py  chat_handler.py  memory_handler.py  session_handler.py
workers/src/services/: llm_connector.py
workers/src/utils/: http_utils.py  logger.py
